--- a/frontend/src/ContactForm/styled.scss
+++ b/frontend/src/ContactForm/styled.scss
@@ -1,6 +1,6 @@
 h1 {
   display: table;
-  margin: 40px auto;
+  margin: auto;
   font: 30px Helvetica;
   letter-spacing: 2px;
   text-transform: uppercase;
