--- a/frontend/src/ContactForm/styled.scss
+++ b/frontend/src/ContactForm/styled.scss
@@ -1,6 +1,7 @@
 h1 {
   display: table;
   margin: auto;
+  padding-top: 30px;
   font: 30px Helvetica;
   letter-spacing: 2px;
   text-transform: uppercase;
