--- a/frontend/src/Cases/Cases.scss
+++ b/frontend/src/Cases/Cases.scss
@@ -1,8 +1,11 @@
 .Cases {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+
     .liveDot {
         width: 30px;
         height: 30px;
-        margin-right: 0.5em;
     }
     
     .totalCases {
@@ -11,7 +14,6 @@
         font-weight: 400;
         line-height: 1;
         letter-spacing: 0.01071em;
-        margin-top: 1em;
     }
     
     .cardRoot {
@@ -22,20 +24,22 @@
         display: flex;
         place-content: center;
         align-items: center;
-        margin-top: 1.5em;
     }
     
-    h1 {
+    h4{
         margin: 0;
     }
     
     .lastUpdated {
-        margin-top: 0.5em;
         color: gray;
+        font-size: 12px;
     }
     
     .stats {
-        font-size: 28px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 22px;
     }
     
     .loadingCases {
