--- a/frontend/src/RegionsStats/List/List.scss
+++ b/frontend/src/RegionsStats/List/List.scss
@@ -22,15 +22,15 @@
         color: white;
     }
 
-    .user-region {
-        animation-name: blink;
+    .user-region-list {
+        animation-name: blink-list;
         animation-duration: 1s;
         animation-timing-function: cubic-bezier(0.390, 0.575, 0.565, 1.000);
         animation-iteration-count: 3;
         animation-fill-mode: both;
     }
 
-    @keyframes blink {
+    @keyframes blink-list {
         0% {
             opacity: 1;
         }
