text align center

--- a/frontend/src/RegionsStats/List/List.scss
+++ b/frontend/src/RegionsStats/List/List.scss
@@ -5,6 +5,10 @@
     background-color: white;
     color: black !important;
 
+    th {
+        text-align: center;
+    }
+
     td, th {
         border: 1px solid #ddd;
         padding: 8px;
