--- a/frontend/src/Cases/Cases.scss
+++ b/frontend/src/Cases/Cases.scss
@@ -1,7 +1,7 @@
 .Cases {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    bottom: 10px;
+    right: 10px;
 
     .liveDot {
         width: 30px;
